// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createChangelog throws an error if the \`event\` value is invalid 1`] = `"changelog#createEntry: Entry has invalid \`event\` value: invalidEvent"`;

exports[`createChangelog throws an error if the \`field\` property is missing 1`] = `"changelog#createEntry: Entry is missing the \`field\` property"`;

exports[`createEntry returns a changelog entry object 1`] = `
Object {
  "alreadyExisted": false,
  "event": "setField",
  "field": "license",
  "meta": Object {},
}
`;

exports[`get returns the changelog as an array of entry objects 1`] = `
Array [
  Object {
    "alreadyExisted": false,
    "event": "setField",
    "field": "name",
    "meta": Object {},
    "previousValue": "previous-name",
  },
  Object {
    "alreadyExisted": false,
    "event": "requireDependency",
    "field": "dependencies",
    "meta": Object {
      "pkg": "express",
      "version": "4.16.4",
    },
  },
]
`;

exports[`getAsMessages returns the changelog as an array of messages 1`] = `
Array [
  "Set value for field 'name' (overwrote existing value)",
  "Required package express@4.16.4 in dependencies (new dependency)",
]
`;

exports[`getLastEntry returns object for last entry in the changelog 1`] = `
Object {
  "alreadyExisted": false,
  "event": "requireDependency",
  "field": "dependencies",
  "meta": Object {
    "pkg": "express",
    "version": "4.16.4",
  },
}
`;

exports[`getLastEntryAsMessage returns last entry in the changelog as a message 1`] = `"Required package express@4.16.4 in dependencies (new dependency)"`;
